      size_multiset_sum_mset[simp]
  - Added lemmas.
      filter_mset_eq_mempty_iff[simp]
      filter_mset_mono_strong
      filter_mset_sum_list
      set_mset_sum_list[simp]
      size_mset_sum_mset_conv[simp]

* Removed theory "HOL-Library.Divides" (finally).


*** HOLCF ***

* Theory "HOLCF.Cpo": simproc "apply_cont" solves "cont (\<lambda>f. f x y z)"
etc.


*** System ***

* The Z Garbage Collector (ZGC) of Java 21 is now used by default (see
also https://wiki.openjdk.org/display/zgc). This should work uniformly
on all platforms, but requires a reasonably new version of Windows
(Windows 10 or Windows Server 2019).

* SSH connections allow both bash and zsh as remote shell. This is
particularly important for macOS, where zsh is the default user shell.

* Isabelle/Scala supports SVG via the "jsvg" library
(com.github.weisj.jsvg.SVGDocument), as well as the "flatlaf-extras"
library (com.formdev.flatlaf.extras.FlatSVGIcon).



New in Isabelle2025 (March 2025)
--------------------------------

*** General ***

* The Simplifier now supports special "congprocs", using keyword
'congproc' or 'weak_congproc' in the 'simproc_setup' command (or ML
antiquotation of the same name). See also
~~/src/HOL/Imperative_HOL/ex/Congproc_Ex.thy for further explanations
and examples.

* The attribute "cong_format" produces the internal format of Simplifier
"cong" rules, notably for congproc implementations.


*** Inner syntax --- the term language ***

* Markup for free variables now works uniformly for parsing and
printing, concerning declaration scopes and highlighting of undeclared
variables.

* Syntax translations now work in a local theory context, notably within
"bundle begin ... end".

* Syntax translations now support formal dependencies via commands
'syntax_types' or 'syntax_consts'. This is essentially an abstract
specification of the effect of 'translations' (or translation functions
in ML). Most Isabelle theories have been adapted accordingly, such that